Подправил ошибки в сваггере и хэндлерах
