# book-cover-service/docs/swagger.json
@@ -357,6 +357,15 @@
                         "name": "cover_id",
                         "in": "path",
                         "required": true
+                    },
+                    {
+                        "description": "New cover",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/book-cover-service_internal_covers_transport_dto.UpdateCoverRequest"
+                        }
                     }
                 ],
                 "responses": {
@@ -529,7 +538,7 @@
                     {
                         "type": "string",
                         "description": "User id",
-                        "name": "book_id",
+                        "name": "user_id",
                         "in": "path",
                         "required": true
                     }
@@ -649,6 +658,32 @@
                     "type": "string",
                     "example": "-\u003e paste book's uuid \u003c-"
                 },
+                "description": {
+                    "type": "string",
+                    "example": "Ernest Hemingway Moveable fest anime style cover"
+                },
+                "imagesKeys": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    },
+                    "example": [
+                        "/covers/1252"
+                    ]
+                },
+                "status": {
+                    "type": "integer",
+                    "example": 0
+                },
+                "title": {
+                    "type": "string",
+                    "example": "Moveable fest cover"
+                }
+            }
+        },
+        "book-cover-service_internal_covers_transport_dto.UpdateCoverRequest": {
+            "type": "object",
+            "properties": {
                 "description": {
                     "type": "string",
                     "example": "Ernest Hemingway Moveable fest anime style cover"
